// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-koala destination: identify action - all fields 1`] = `
Object {
  "email": "pi@ehegi.bj",
  "identifies": Array [
    Object {
      "context": Object {
        "testType": "U9I9kNNU",
      },
      "device_ip": "U9I9kNNU",
      "email": "pi@ehegi.bj",
      "message_id": "U9I9kNNU",
      "sent_at": "2086-03-26T18:50:08.535Z",
      "traits": Object {
        "testType": "U9I9kNNU",
      },
      "type": "identify",
    },
  ],
  "ip": "U9I9kNNU",
  "traits": Object {
    "testType": "U9I9kNNU",
  },
}
`;

exports[`Testing snapshot for actions-koala destination: identify action - required fields 1`] = `
Object {
  "identifies": Array [
    Object {
      "message_id": "U9I9kNNU",
      "sent_at": "2086-03-26T18:50:08.535Z",
      "type": "identify",
    },
  ],
  "traits": Object {},
}
`;

exports[`Testing snapshot for actions-koala destination: track action - all fields 1`] = `
Object {
  "email": "seli@jili.ec",
  "events": Array [
    Object {
      "context": Object {
        "testType": "iwl@fN13",
      },
      "device_ip": "iwl@fN13",
      "email": "seli@jili.ec",
      "event": "iwl@fN13",
      "message_id": "iwl@fN13",
      "properties": Object {
        "testType": "iwl@fN13",
      },
      "sent_at": "2033-03-10T11:51:04.527Z",
      "traits": Object {
        "testType": "iwl@fN13",
      },
      "type": "track",
    },
  ],
  "ip": "iwl@fN13",
  "traits": Object {
    "testType": "iwl@fN13",
  },
}
`;

exports[`Testing snapshot for actions-koala destination: track action - required fields 1`] = `
Object {
  "events": Array [
    Object {
      "event": "iwl@fN13",
      "message_id": "iwl@fN13",
      "sent_at": "2033-03-10T11:51:04.527Z",
      "type": "track",
    },
  ],
  "traits": Object {},
}
`;
